made some changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
+<h1> This is a title </h1>
+<p> I have sex daily. I mean dyslexiaXD</p>
+<p> the line above is wrong please place a comment</p>
+<p>  </p>
+
 
 </body>
 </html>
