--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 <h1> This is a title </h1>
-<p> I have sex daily. I mean dyslexiaXD</p>
+<p> I have sex daily. I mean dyslexia XD</p>
 <p> the line above is wrong please place a comment</p>
-<p>  </p>
+<p> goed gespot hier stond inderdaad niks! </p>
+
+
 
 
 </body>
